[package]
name = "bevy_replicate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", default-features = false }
bit_serializer = { path = "../bit_serializer" }
paste = "1.0"
