[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_replicate = { path = "../bevy_replicate" }
bevy = { version = "0.8.0" }
bit_serializer = { path = "../../bit_serializer" }
paste = "1.0"
bincode = "1.3.1"
serde = "1"
bevy_renet = { path = "../../renet/bevy_renet" }
renet_visualizer = { path = "../../renet/renet_visualizer" }
bevy_egui = "0.15.0"
